# AIlabs

./: .gitignore  README.md  main.py  pyproject.toml
Lab1/: lab1.ipynb
Lab2/: dataset.py  lab2.ipynb  utils.py
Lab3/: hrplanes.yaml  lab3.ipynb
